--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,9 @@ body {
 .everyCard {
     display: flex;
     margin: 5%;
-    flex-basis: 75%; 
-    flex-direction: column
+    flex-direction: column;
+    justify-content: center;
+    height: 170vh;
 
 }
 
@@ -52,11 +53,24 @@ a, a:visited {
     margin: 0px 10px; 
 }
 
-
-.navBar > h2 {
-    padding: 10px 0px; 
-    font-style: italic;
+a:hover {
+    color: black; 
 }
+
+.nameLogo{
+    display:flex;
+    flex-direction: row; 
+    font-size: 12px; 
+}
+
+.nameLogo > .logo {
+    font-size: 24px; 
+    color: white; 
+    padding: 5px;
+
+}
+
+
 
 /*
 
@@ -65,8 +79,34 @@ a, a:visited {
 */
 
 .wholeLanding{
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     height: 100vh; 
+    color: white; 
 }
+
+.blurb{ 
+    display: flex;
+    justify-content: center;
+}
+
+.blurb > h3 { 
+    position: absolute;
+    top: 650px;
+
+}
+
+.downArrow {
+    position: absolute;
+    top: 700px;
+
+}
+
+
+
+
 
 /* 
 
@@ -77,27 +117,63 @@ Adjust the width of the cards (look at exercise 2 for help)
 */
 
 .card {
-    background-color: white;
+    background-color: #F2EEE8;
     border: black solid;
     display: flex;
-    flex-direction: column; 
-    margin: 5%;  
-    max-width:315px; 
+    flex-direction: row; 
+    margin: 100px 25px;  
+    min-width:315px; 
     padding: 20px; 
+    border-radius: 20px;
 
-}
-
-.image {
-   flex-basis: 60%; 
-   width: 100%; 
-   padding: 0; 
-   margin: 0; 
 }
 
 .image > img {
-    width: 100%; 
+    display: block; 
+    border-radius: 50%;
+    height: 200px;
+    width: 200px; 
+
 }
 
+.image, .text, .musicPlayer{
+    display:flex; 
+    justify-content: center;
+    flex-basis: 30%; 
+}
+
+.text{
+    flex-direction: column;
+    align-items: center;
+    padding: 20px; 
+   
+}
+
+.text > p:first-child {
+    font-style: italic;
+}
+
+.playIcon, .backwards, .forwards {
+    font-size: 32px;
+    padding: 5px;  
+}
+
+
+
+
+
+/*
+
+---FOOTER---
+
+*/
+
+footer{
+    color: white;
+    display:flex;
+    justify-content: center;
+    padding: 10px; 
+}
 
 
 
@@ -112,6 +188,11 @@ Fix nav bar for responsive
 @media only screen and (min-width: 1000px) {
     .everyCard{
         flex-direction: row; 
+        height: 100vh;
+    }
+
+    .card{
+        flex-direction: column; 
     }
 
 }
